# ScratchInterpreter

./: CMakeLists.txt  README.md  compile_commands.json
src/: main.cpp
